--- a/src/css/main.css
+++ b/src/css/main.css
@@ -57,6 +57,8 @@ input, textarea {
     width: 910px; }
   .container--services {
     width: 1680px; }
+  .container--portfolio {
+    width: 1680px; }
   .container--contact {
     width: 910px;
     padding: 0 20px; }
@@ -261,24 +263,8 @@ input, textarea {
 
 /* --- pulse button end --- */
 /* --- slick slider --- */
-.slick-prev, .slick-next {
-  display: inline-block;
-  position: relative;
-  outline: none;
-  top: -16px;
-  left: 0;
-  right: 0;
-  margin: 0px 60px;
-  padding: 7px 0;
-  width: 32px;
-  height: 32px;
-  -webkit-border-radius: 50%;
-          border-radius: 50%;
-  background-color: transparent;
-  border: 1px solid rgba(99, 111, 133, 0.25); }
-
-.slick-prev:before, .slick-next:before {
-  display: none; }
+.slick-list {
+  overflow: visible; }
 
 /* --- slick dots end --- */
 /* --- title & text style --- */
@@ -346,9 +332,8 @@ input, textarea {
   background-image: -webkit-linear-gradient(120deg, #eff5fa 0%, #fff 80%, #fff 100%);
   background-image: -o-linear-gradient(120deg, #eff5fa 0%, #fff 80%, #fff 100%);
   background-image: linear-gradient(330deg, #eff5fa 0%, #fff 80%, #fff 100%);
-  text-align: center; }
-  .about-slider__buttons {
-    position: relative; }
+  text-align: center;
+  overflow: hidden; }
 
 .about-client {
   position: relative; }
@@ -356,14 +341,58 @@ input, textarea {
     margin: 40px 0 10px; }
   .about-client__quotes {
     position: absolute;
-    top: -100px;
-    left: -100px; }
+    left: 0;
+    -webkit-transform: translate(-60%, -75%);
+        -ms-transform: translate(-60%, -75%);
+            transform: translate(-60%, -75%); }
+
+.about-client__slider-controls {
+  display: inline-block; }
+  .about-client__slider-controls .slick-dots {
+    margin: 0 10px;
+    position: relative;
+    top: 4px;
+    bottom: auto;
+    width: auto;
+    height: 10px;
+    display: inline-block; }
+    .about-client__slider-controls .slick-dots li {
+      position: relative;
+      top: -10px; }
+
+.slick-prev,
+.slick-next {
+  position: relative;
+  top: 8px;
+  left: auto;
+  right: auto;
+  display: inline-block;
+  outline: none;
+  margin: 0px 10px;
+  width: 32px;
+  height: 32px;
+  -webkit-border-radius: 50%;
+          border-radius: 50%;
+  background-color: transparent;
+  border: 1px solid rgba(99, 111, 133, 0.25); }
+  .slick-prev:before,
+  .slick-next:before {
+    content: ''; }
+
+.slick-prev {
+  float: left; }
+  .slick-prev img {
+    margin-right: 2px; }
+
+.slick-next {
+  float: right; }
+  .slick-next img {
+    margin-left: 3px; }
 
 .client {
   display: inline-block;
   margin-bottom: 50px;
-  width: 870px;
-  height: 385px;
+  width: 95% !important;
   -webkit-box-shadow: 0 20px 45px rgba(122, 135, 157, 0.06);
           box-shadow: 0 20px 45px rgba(122, 135, 157, 0.06);
   -webkit-border-radius: 6px;
@@ -372,7 +401,7 @@ input, textarea {
   position: relative;
   padding: 80px 80px 0; }
   .client__info {
-    padding-top: 39px;
+    padding: 40px 0;
     font-weight: 600; }
     .client__info-name {
       color: #673fbf; }
@@ -404,13 +433,14 @@ input, textarea {
   text-align: left;
   margin: 90px 30px;
   width: 370px;
-  height: 332px;
   -webkit-box-shadow: 0 11px 35px rgba(34, 34, 34, 0.44);
           box-shadow: 0 11px 35px rgba(34, 34, 34, 0.44);
   -webkit-border-radius: 5px;
           border-radius: 5px;
   background-color: #ffffff;
   position: relative; }
+  .services-item__text {
+    text-align: left; }
   .services-item__icon-wrapper {
     position: absolute;
     top: -17%;
@@ -426,7 +456,8 @@ input, textarea {
     text-align: center;
     padding-top: 38px; }
   .services-item__heading {
-    padding: 87px 155px 0 41px;
+    width: 70%;
+    padding: 87px 0 0 20px;
     color: #29384d;
     font-size: 24px;
     font-weight: 600;
@@ -439,7 +470,6 @@ input, textarea {
   background: linear-gradient(30deg, #eff5fa 0%, #fff 80%, #fff 100%); }
 
 .portfolio-slider-wrapper {
-  position: relative;
   margin-top: 40px; }
 
 .portfolio-slider-item {
@@ -456,10 +486,14 @@ input, textarea {
   background-color: #ffffff;
   vertical-align: top; }
   .portfolio-slider-item__info {
+    position: relative;
     display: inline-block;
     width: 50%;
     vertical-align: top;
-    padding: 64px 44px 10px; }
+    padding: 50px 44px 10px; }
+    .portfolio-slider-item__info .portfolio-slider-buttons {
+      position: absolute;
+      bottom: -50px; }
   .portfolio-slider-item__icon {
     width: 77px;
     height: 77px;
@@ -473,11 +507,7 @@ input, textarea {
     font-size: 24px;
     font-weight: 600;
     line-height: 36px;
-    padding: 30px 0; }
-  .portfolio-slider-item__text {
-    text-align: left;
-    padding-bottom: 28px;
-    padding-left: 0; }
+    padding: 20px 0; }
   .portfolio-slider-item__skills {
     display: block;
     float: left;
@@ -487,9 +517,6 @@ input, textarea {
     float: left;
     width: 50%;
     overflow: hidden; }
-
-.portfolio-slider-buttons .slick-prev, .portfolio-slider-buttons .slick-next {
-  margin: 0 5px; }
 
 .skills {
   float: left;
