--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -54,6 +54,8 @@ input,textarea
         width: 910px
     &--services
         width: 1680px
+    &--portfolio
+        width: 1680px
     &--contact
         width: 910px
         padding: 0 20px
@@ -242,52 +244,8 @@ input,textarea
 /* --- slick slider --- */
 
 .slick
-	//&-active
-		opacity: 1
-	//&-slide
-		opacity: 0.3
 	&-list
-		//overflow: visible
-	&-prev, &-next
-        display: inline-block
-        position: relative
-        outline: none
-        top: -16px
-        left: 0
-        right: 0
-        margin: 0px 60px
-        padding: 7px 0
-        width: 32px
-        height: 32px
-        border-radius: 50%
-        background-color: transparent
-        border: 1px solid rgba(99, 111, 133, 0.25)
-
-.slick-prev:before,.slick-next:before
-    display: none
-
-//.slick-dots li
-    position: relative
-    display: inline-block
-    margin: 0 5px
-
-//.slick-dots li button
-    color: transparent
-    border: 0
-    background: transparent
-
-//.slick-dots li button:before
-    position: absolute
-    top: 7px
-    left: 7px
-    content: ''
-    width: 6px
-    height: 6px
-    background-color: #606f85
-    opacity: 0.25
-
-//.slick-dots li.slick-active button:before
-    opacity: .75
+		overflow: visible
 
 /* --- slick dots end --- */
 
@@ -356,9 +314,9 @@ input,textarea
 .about
     background-image: linear-gradient(330deg, #eff5fa 0%, #fff 80%, #fff 100%)
     text-align: center
-
-    &-slider__buttons
-        position: relative
+    overflow: hidden
+    //&-slider__buttons
+    //    position: relative
 
 .about-client
     position: relative
@@ -366,22 +324,63 @@ input,textarea
         margin: 40px 0 10px
     &__quotes
         position: absolute
-        top: -100px
-        left: -100px
+        left: 0
+        transform: translate(-60%,-75%)
 
+
+.about-client__slider-controls
+    display: inline-block
+    .slick-dots
+        margin: 0 10px
+        position: relative
+        top: 4px
+        bottom: auto
+        width: auto
+        height: 10px
+        display: inline-block
+        li
+            position: relative
+            top: -10px
+.slick-prev,
+.slick-next
+    position: relative
+    top: 8px
+    left: auto
+    right: auto
+    display: inline-block
+    outline: none
+    margin: 0px 10px
+    //padding: 7px 0
+    width: 32px
+    height: 32px
+    border-radius: 50%
+    background-color: transparent
+    border: 1px solid rgba(99, 111, 133, 0.25)
+    &:before
+        content: ''
+
+
+.slick-prev
+    float: left
+    img
+        margin-right: 2px
+.slick-next
+    float: right
+    img
+        margin-left: 3px
 
 .client
     display: inline-block
     margin-bottom: 50px
-    width: 870px
-    height: 385px
+    width: 95% !important
+    //height: 385px
     box-shadow: 0 20px 45px rgba(122, 135, 157, 0.06)
     border-radius: 6px
     background-color: #ffffff
     position: relative
     padding: 80px 80px 0
     &__info
-        padding-top: 39px
+        padding: 40px 0
         font-weight: 600
         &-name
             color: #673fbf
@@ -410,11 +409,13 @@ input,textarea
     text-align: left
     margin: 90px 30px
     width: 370px
-    height: 332px
+    //height: 332px
     box-shadow: 0 11px 35px rgba(34, 34, 34, 0.44)
     border-radius: 5px
     background-color: #ffffff
     position: relative
+    &__text
+        text-align: left
     &__icon-wrapper
         position: absolute
         top: -17%
@@ -427,7 +428,8 @@ input,textarea
         text-align: center
         padding-top: 38px
     &__heading
-        padding: 87px 155px 0 41px
+        width: 70%
+        padding: 87px 0 0 20px
         color: #29384d
         font-size: 24px
         font-weight: 600
@@ -439,8 +441,7 @@ input,textarea
     background: linear-gradient(30deg, #eff5fa 0%, #fff 80%, #fff 100%)
 
 .portfolio-slider-wrapper
-    //display: block
-    position: relative
+    //position: relative
     margin-top: 40px
     //width: 1170px
 
@@ -457,10 +458,14 @@ input,textarea
         background-color: #ffffff
         vertical-align: top
         &__info
+            position: relative
             display: inline-block
             width: 50%
             vertical-align: top
-            padding: 64px 44px 10px
+            padding: 50px 44px 10px
+            .portfolio-slider-buttons
+                position: absolute
+                bottom: -50px
         &__icon
             width: 77px
             height: 77px
@@ -473,11 +478,7 @@ input,textarea
             font-size: 24px
             font-weight: 600
             line-height: 36px
-            padding: 30px 0
-        &__text
-            text-align: left
-            padding-bottom: 28px
-            padding-left: 0
+            padding: 20px 0
         &__skills
             display: block
             float: left
@@ -487,13 +488,6 @@ input,textarea
             float: left
             width: 50%
             overflow: hidden
-
-.portfolio-slider-buttons
-    //right: 42.8%
-    ////position: absolute
-    //bottom: 20px
-    .slick-prev, .slick-next
-        margin: 0 5px
 
 .skills
     float: left
