relative: 320px and down

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -328,6 +328,7 @@ input,textarea
         transform: translate(-60%,-75%)
 
 
+
 .about-client__slider-controls
     display: inline-block
     .slick-dots
@@ -488,6 +489,10 @@ input,textarea
             float: left
             width: 50%
             overflow: hidden
+
+//.portfolio-slider-buttons
+    position: absolute
+    bottom: -50px
 
 .skills
     float: left
