--- a/src/css/media.css
+++ b/src/css/media.css
@@ -145,8 +145,10 @@
 /*  --- Medium devices (tablets, 768px and up) --- */
 @media screen and (max-width: 991px) {
   .container {
-    width: 700px; }
+    width: 550px; }
     .container--banner {
+      width: 500px; }
+    .container--about {
       width: 550px; }
     .container--contact {
       padding: 0; }
@@ -206,18 +208,27 @@
     font-weight: 300;
     line-height: 20px; }
   .client {
+    width: 80% !important;
     margin-bottom: 50px;
     padding: 50px 40px 0px; }
     .client__photo {
       width: 70px;
       height: 70px;
       top: -12%; }
+  .about-client__quotes {
+    display: none; }
   .services-item {
     margin: 60px 20px; }
   .portfolio-slider-item {
-    width: 600px !important;
-    height: 300px; }
+    width: 300px !important;
+    height: 600px; }
+    .portfolio-slider-item__icon {
+      display: none; }
+    .portfolio-slider-item__img {
+      width: 100%;
+      height: 50%; }
     .portfolio-slider-item__info {
+      width: 100%;
       padding: 14px 24px 10px; }
     .portfolio-slider-item__heading {
       font-size: 16px;
@@ -230,7 +241,7 @@
   .portfolio-slider-item__info .portfolio-slider-buttons {
     bottom: -30px; } }
 
-/*  --- Small devices (landscape phones, 576px and up) --- */
+/*  --- Small devices (landscape phones, 321px and up) --- */
 @media screen and (max-width: 576px) {
   .container {
     width: 90%; }
@@ -242,9 +253,8 @@
       padding-top: 20px; }
   .text--services {
     width: 100%; }
-  .quotes {
-    top: 22px;
-    left: -44%; }
+  .about-client__quotes {
+    display: none; }
   .portfolio-slider-item {
     width: 80% !important;
     height: 250px; }
@@ -256,3 +266,22 @@
       padding: 5px 0; }
   .skills {
     padding: 5px; } }
+
+/*  --- Small devices (portrait phones, 320px and down) --- */
+@media screen and (max-width: 320px) {
+  .container {
+    width: 200px; }
+  .nav {
+    top: 35px; }
+    .nav-logo {
+      top: -50%; }
+  .banner__head {
+    width: 150px; }
+  .banner__info {
+    font-size: 22px;
+    line-height: 1.24; }
+  .banner__descr {
+    padding: 5px; }
+  .btn--banner {
+    margin: 15px 0;
+    padding: 15px 30px; } }
