--- a/src/sass/media.sass
+++ b/src/sass/media.sass
@@ -173,8 +173,10 @@
 /*  --- Medium devices (tablets, 768px and up) --- */
 @media screen and (max-width: 991px)
     .container
-        width: 700px
+        width: 550px
         &--banner
+            width: 500px
+        &--about
             width: 550px
         &--contact
             padding: 0
@@ -240,6 +242,7 @@
             line-height: 20px
 
     .client
+        width: 80% !important
         margin-bottom: 50px
         padding: 50px 40px 0px
         &__photo
@@ -247,15 +250,26 @@
             height: 70px
             top: -12%
 
+    .about-client
+        &__quotes
+            display: none
+
     .services
         &-item
             margin: 60px 20px
 
     .portfolio-slider
         &-item
-            width: 600px !important
-            height: 300px
+            width: 300px !important;
+            height: 600px;
+            &__icon
+                display: none
+            &__img
+                width: 100%
+                height: 50%
+                //float: none
             &__info
+                width: 100%
                 padding: 14px 24px 10px
             &__heading
                 font-size: 16px
@@ -271,12 +285,11 @@
 
     .portfolio-slider-item__info .portfolio-slider-buttons
         bottom: -30px
-/*  --- Small devices (landscape phones, 576px and up) --- */
+/*  --- Small devices (landscape phones, 321px and up) --- */
 
 @media screen and (max-width: 576px)
     .container
         width: 90%
-        //width: 550px
 
     .btn--nav
         padding: 5px 10px
@@ -290,9 +303,8 @@
         &--services
             width: 100%
 
-    .quotes
-        top: 22px
-        left: -44%
+    .about-client__quotes
+        display: none
 
     .portfolio-slider
         &-item
@@ -308,3 +320,27 @@
 
     .skills
         padding: 5px
+
+/*  --- Small devices (portrait phones, 320px and down) --- */
+
+@media screen and (max-width: 320px)
+    .container
+        width: 200px
+
+    .nav
+        top: 35px
+        &-logo
+            top: -50%
+
+    .banner
+        &__head
+            width: 150px
+        &__info
+            font-size: 22px
+            line-height: 1.24
+        &__descr
+            padding: 5px
+
+    .btn--banner
+        margin: 15px 0
+        padding: 15px 30px
