--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -143,6 +143,7 @@ input,textarea
     font-family: "Poppins", Arial, sans-serif
     position: relative
     &--nav
+        display: inline
         color: #ffffff
         font-size: 14px
         text-transform: uppercase
@@ -196,7 +197,6 @@ input,textarea
         text-decoration: none
         padding: 41px 63px
         margin: 60px 0 100px
-
     &--contact
         background-color: #ffffff
         color: #673fbf
@@ -206,6 +206,17 @@ input,textarea
         text-transform: uppercase
         text-decoration: none
         margin: 1% 0 2%
+    &--popup
+        display: block
+        margin: 0 auto 10px
+        color: #ffffff
+        background: transparent
+        font-size: 14px
+        text-transform: uppercase
+        border-radius: 27px
+        border: 2px solid #ffffff
+        text-decoration: none
+        padding: 10px 20px
 
 /* --- pulse button --- */
 
@@ -289,6 +300,13 @@ input,textarea
         color: #ffffff
         &:after
             background-color: #fff
+    &--popup
+        color: #fff
+        font-size: 30px
+        font-weight: 400
+        padding: 0 20px
+        &::after
+            display: none
 
 .text
     padding: 10px 30px
@@ -342,6 +360,7 @@ input,textarea
         li
             position: relative
             top: -10px
+
 .slick-prev,
 .slick-next
     position: relative
@@ -350,8 +369,7 @@ input,textarea
     right: auto
     display: inline-block
     outline: none
-    margin: 0px 10px
-    //padding: 7px 0
+    margin: 0 10px
     width: 32px
     height: 32px
     border-radius: 50%
@@ -359,7 +377,6 @@ input,textarea
     border: 1px solid rgba(99, 111, 133, 0.25)
     &:before
         content: ''
-
 
 .slick-prev
     float: left
@@ -370,11 +387,29 @@ input,textarea
     img
         margin-left: 3px
 
+.slider-prev,
+.slider-next
+    outline: none
+    width: 32px
+    height: 32px
+    border-radius: 50%
+    background-color: transparent
+    border: 1px solid rgba(99, 111, 133, 0.25)
+
+.slider-prev
+    margin-right: 5px
+    img
+        margin-right: 2px
+
+.slider-next
+    float: right
+    img
+        margin-left: 3px
+
 .client
     display: inline-block
     margin-bottom: 50px
     width: 95% !important
-    //height: 385px
     box-shadow: 0 20px 45px rgba(122, 135, 157, 0.06)
     border-radius: 6px
     background-color: #ffffff
@@ -430,7 +465,7 @@ input,textarea
         padding-top: 38px
     &__heading
         width: 70%
-        padding: 87px 0 0 20px
+        padding: 87px 0 0 30px
         color: #29384d
         font-size: 24px
         font-weight: 600
@@ -546,3 +581,37 @@ input,textarea
             resize: none
             &::placeholder
                 color: red
+
+/* -- popup form style -- */
+
+.popup-form
+    z-index: 9999
+    position: fixed
+    width: 500px
+    top: 100px
+    left: 50%
+    transform: translateX(-50%)
+    display: none
+    background: linear-gradient(to bottom, #bc52a8, #7442bc)
+    border: 4px solid #fff
+    border-radius: 20px
+    padding: 5px
+    .form-field__input--textarea
+        min-height: 75px
+
+#popup-form__bg
+    display: none
+    background-color: #9047c7
+    opacity: 0.7
+    width: 100%
+    height: 100%
+    z-index: 9998
+    position: fixed
+    top: 0
+    bottom: 0
+    right: 0
+    left: 0
+
+//.blur
+    filter: blur(3px) contrast(.8)
+    brightness: (.8)
