--- a/src/sass/media.sass
+++ b/src/sass/media.sass
@@ -341,6 +341,73 @@
         &__descr
             padding: 5px
 
-    .btn--banner
-        margin: 15px 0
+
+    .btn
         padding: 15px 30px
+        font-size: 12px
+        &--banner
+            margin: 15px 0
+        &--contact
+            font-size: 12px
+            padding: 10px
+            font-weight: 300
+
+    .title
+        &--texted
+            font-size: 16px
+            line-height: 1.24
+            &::before
+                font-size: 12px
+
+    .text
+        padding: 5px 3px
+        font-size: 12px
+        line-height: 1.24
+        &--portfolio
+            width: 90%
+
+    .about-company__img
+        padding: 10px 0
+
+    .client
+        &__photo
+            width: 50px
+            height: 50px
+            top: -2%
+
+    .about-client__slider-controls .slick-dots
+        display: none
+
+    .title
+        font-size: 20px
+        line-height: 25px
+
+    .services-item
+        width: 170px
+        height: 100%
+        margin: 35px 0
+        &__heading
+            padding-top: 30px
+            font-size: 12px
+            line-height: 1.24
+        &__text
+            padding: 20px
+        &__icon-wrapper
+            top: -17%
+            left: 30%
+            width: 60px
+            height: 60px
+            padding-top: 15px
+
+    .portfolio-slider-item
+        height: 90%
+        &__img
+            width: 150px
+            height: 150px
+        &__info
+            padding: 10px
+            margin-bottom: 40px
+
+    .form-field__input
+        padding: 12px 10px 10px 43px
+        font-size: 12px
