--- a/src/css/main.css
+++ b/src/css/main.css
@@ -141,6 +141,7 @@ input, textarea {
   font-family: "Poppins", Arial, sans-serif;
   position: relative; }
   .btn--nav {
+    display: inline;
     color: #ffffff;
     font-size: 14px;
     text-transform: uppercase;
@@ -214,6 +215,18 @@ input, textarea {
     text-transform: uppercase;
     text-decoration: none;
     margin: 1% 0 2%; }
+  .btn--popup {
+    display: block;
+    margin: 0 auto 10px;
+    color: #ffffff;
+    background: transparent;
+    font-size: 14px;
+    text-transform: uppercase;
+    -webkit-border-radius: 27px;
+            border-radius: 27px;
+    border: 2px solid #ffffff;
+    text-decoration: none;
+    padding: 10px 20px; }
 
 /* --- pulse button --- */
 .btn--banner:hover::after {
@@ -307,6 +320,13 @@ input, textarea {
     color: #ffffff; }
     .title--contact:after {
       background-color: #fff; }
+  .title--popup {
+    color: #fff;
+    font-size: 30px;
+    font-weight: 400;
+    padding: 0 20px; }
+    .title--popup::after {
+      display: none; }
 
 .text {
   padding: 10px 30px;
@@ -368,7 +388,7 @@ input, textarea {
   right: auto;
   display: inline-block;
   outline: none;
-  margin: 0px 10px;
+  margin: 0 10px;
   width: 32px;
   height: 32px;
   -webkit-border-radius: 50%;
@@ -387,6 +407,26 @@ input, textarea {
 .slick-next {
   float: right; }
   .slick-next img {
+    margin-left: 3px; }
+
+.slider-prev,
+.slider-next {
+  outline: none;
+  width: 32px;
+  height: 32px;
+  -webkit-border-radius: 50%;
+          border-radius: 50%;
+  background-color: transparent;
+  border: 1px solid rgba(99, 111, 133, 0.25); }
+
+.slider-prev {
+  margin-right: 5px; }
+  .slider-prev img {
+    margin-right: 2px; }
+
+.slider-next {
+  float: right; }
+  .slider-next img {
     margin-left: 3px; }
 
 .client {
@@ -457,7 +497,7 @@ input, textarea {
     padding-top: 38px; }
   .services-item__heading {
     width: 70%;
-    padding: 87px 0 0 20px;
+    padding: 87px 0 0 30px;
     color: #29384d;
     font-size: 24px;
     font-weight: 600;
@@ -581,3 +621,38 @@ input, textarea {
         color: red; }
       .form-field__input--textarea::placeholder {
         color: red; }
+
+/* -- popup form style -- */
+.popup-form {
+  z-index: 9999;
+  position: fixed;
+  width: 500px;
+  top: 100px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+          transform: translateX(-50%);
+  display: none;
+  background: -webkit-gradient(linear, left top, left bottom, from(#bc52a8), to(#7442bc));
+  background: -webkit-linear-gradient(top, #bc52a8, #7442bc);
+  background: -o-linear-gradient(top, #bc52a8, #7442bc);
+  background: linear-gradient(to bottom, #bc52a8, #7442bc);
+  border: 4px solid #fff;
+  -webkit-border-radius: 20px;
+          border-radius: 20px;
+  padding: 5px; }
+  .popup-form .form-field__input--textarea {
+    min-height: 75px; }
+
+#popup-form__bg {
+  display: none;
+  background-color: #9047c7;
+  opacity: 0.7;
+  width: 100%;
+  height: 100%;
+  z-index: 9998;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0; }
