--- a/src/css/main.css
+++ b/src/css/main.css
@@ -227,6 +227,14 @@ input, textarea {
     border: 2px solid #ffffff;
     text-decoration: none;
     padding: 10px 20px; }
+  .btn--wtf {
+    -webkit-transform: scale(5);
+        -ms-transform: scale(5);
+            transform: scale(5);
+    position: fixed;
+    bottom: 50px;
+    right: 50px;
+    cursor: pointer; }
 
 /* --- pulse button --- */
 .btn--banner:hover::after {
@@ -623,36 +631,33 @@ input, textarea {
         color: red; }
 
 /* -- popup form style -- */
-.popup-form {
-  z-index: 9999;
-  position: fixed;
-  width: 500px;
-  top: 100px;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-      -ms-transform: translateX(-50%);
-          transform: translateX(-50%);
+.popup {
   display: none;
-  background: -webkit-gradient(linear, left top, left bottom, from(#bc52a8), to(#7442bc));
-  background: -webkit-linear-gradient(top, #bc52a8, #7442bc);
-  background: -o-linear-gradient(top, #bc52a8, #7442bc);
-  background: linear-gradient(to bottom, #bc52a8, #7442bc);
-  border: 4px solid #fff;
-  -webkit-border-radius: 20px;
-          border-radius: 20px;
-  padding: 5px; }
-  .popup-form .form-field__input--textarea {
-    min-height: 75px; }
-
-#popup-form__bg {
-  display: none;
-  background-color: #9047c7;
-  opacity: 0.7;
   width: 100%;
   height: 100%;
-  z-index: 9998;
+  z-index: 9999;
   position: fixed;
   top: 0;
-  bottom: 0;
-  right: 0;
   left: 0; }
+  .popup__bg {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(144, 71, 199, 0.7); }
+  .popup__form {
+    position: fixed;
+    width: 500px;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    background: -webkit-gradient(linear, left top, left bottom, from(#bc52a8), to(#7442bc));
+    background: -webkit-linear-gradient(top, #bc52a8, #7442bc);
+    background: -o-linear-gradient(top, #bc52a8, #7442bc);
+    background: linear-gradient(to bottom, #bc52a8, #7442bc);
+    border: 4px solid #fff;
+    -webkit-border-radius: 20px;
+            border-radius: 20px;
+    padding: 5px; }
+    .popup__form .form-field__input--textarea {
+      min-height: 75px; }
