--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -19,11 +19,6 @@ input,textarea
     &::placeholder
         color: #fff !important
 
-
-//textarea
-//&::placeholder
-//    color: #fff
-
 /* --- header --- */
 .header
     display: table
@@ -601,8 +596,8 @@ input,textarea
 
 #popup-form__bg
     display: none
-    background-color: #9047c7
-    opacity: 0.7
+    background-color: #000
+    opacity: 0.75
     width: 100%
     height: 100%
     z-index: 9998
