--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -9,6 +9,7 @@
 
 body
     overflow-x: hidden
+    margin-right: calc(-1 * (100vw - 100%))
     background-color: #ffffff
     color: #606f85
     font-family: "Poppins", Arial, sans-serif
@@ -208,7 +209,7 @@ input, textarea
         transform: scale(5)
         position: fixed
         bottom: 50px
-        right: 80px
+        right: 90px
         text-align: center
         width: 20px
         height: 10px
@@ -217,7 +218,7 @@ input, textarea
         font-size: 9px
         font-weight: 600
         padding-top: 1px
-        //border: 1px solid #673fbf
+        margin-right: calc(-1 * (100vw - 100%))
 
 
 /* --- pulse button --- */
@@ -392,6 +393,10 @@ input, textarea
     background-image: linear-gradient(330deg, #eff5fa 0%, #fff 80%, #fff 100%)
     text-align: center
     overflow: hidden
+
+.about-company
+    &__img
+        padding: 20px 0
 
 .about-client
     position: relative
@@ -576,6 +581,7 @@ input, textarea
   height: 100%
   z-index: 9999
   position: fixed
+  margin-right: calc(-1 * (100vw - 100%))
   top: 0
   left: 0
   &__bg
@@ -596,4 +602,4 @@ input, textarea
       min-height: 75px
 
 .error
-    border: red
+    border: 2px solid red
